Fixed BUG#9559: Functions: Numeric Operations using -ve value gives incorrect                   results.   Actually a problem when converting decimal to int for user variables.

mysql-test/r/sp.result:
  New test case for BUG#9559.
mysql-test/t/sp.test:
  New test case for BUG#9559.
sql/item_func.cc:
  Don't set the unsigned flag when converting decimal user var to int.